[package]
name = "rustydoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple-home-dir = "0.1.2"
termion = "2.0.1"
tui = "0.19.0"
